# microsoft-agent-hackathon

./: .gitignore  README.md  azure.yaml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
AI-Foundry-SDK/: .env  code.py  readme.md
Semantic-Kernel-SDK/: .env  code.py  readme.md
backend/: Dockerfile  README.md  agent_config.json  build_policy_index.py  generate_knowledge.py  groupchat.py  main.py  models.py  parse_input.py  pyproject.toml  requirements.txt
backend/app/: main.py  sample_data.py
backend/app/api/v1/endpoints/: agent.py  documents.py  files.py  index_management.py  workflow.py
backend/app/core/: config.py  logging_config.py
backend/app/models/: agent.py  claim.py
backend/app/services/: claim_processing.py  single_agent.py
backend/app/workflow/: __init__.py  pdf_processor.py  policy_search.py  registry.py  supervisor.py  tools.py
backend/app/workflow/agents/: __init__.py  claim_assessor.py  communication_agent.py  policy_checker.py  risk_analyst.py
backend/app/workflow/data/policies/: comprehensive_auto_policy.md
backend/app/workflow/data/policy_index/: index.pkl
frontend/: .dockerignore  Dockerfile  README.md  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: data.json  layout.tsx  page.tsx  policy-data.json
frontend/components/: active-claims-table.tsx  activity-feed.tsx  agent-status-cards.tsx  agent-workflow-visualization.tsx  app-sidebar.tsx  chart-area-interactive.tsx  (+10 more)
infra/: main.bicep  main.parameters.json
src/: App.tsx  main.tsx
(+62 files in other folders)
