[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Hello World FastAPI app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "uvicorn[standard]>=0.29.0",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "python-dotenv>=1.1.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.8.0",
    "tiktoken>=0.8.0",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.1",
]
